--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork2.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork2.html
@@ -84,6 +84,7 @@
             <th>尺寸</th>
             <th>销售数</th>
             <th>已拍数量</th>
+            <th>样品数量</th>
             <th>上架前库存数</th>
             <th width="150px">状态</th>
             </thead>
@@ -110,6 +111,7 @@
 
                                        id="ding_huo_num_{{ sku.sku_id }}">{{ sku.ding_huo_num }} </a>
                                 </td>
+                                <td>{{ sku.sample_num }}</td>
                                 <td>{{ sku.ku_cun_num }}</td>
                                 <td>
                                     <span class="dinghuo_status" id="dinghuostatus_{{ sku.sku_id }}"
