--- a/shopmanager/shopback/trades/templates/product_analysis/product_analysis.html
+++ b/shopmanager/shopback/trades/templates/product_analysis/product_analysis.html
@@ -42,15 +42,14 @@
             <th>Out_Id</th>
             <th>名称</th>
             <th>销售数量</th>
-            <th>供应商</th>
-
+            <th>次品数量</th>
             </thead>
             <tbody>
             {% for i in data %}
                 <tr>
                     <td>{{ i.0 }}</td>
-                    <td>{{ i.1 }}</td>
                     <td>{{ i.2 }}</td>
+                    <td>{{ i.1 }}</td>
                     <td>{{ i.3 }}</td>
                 </tr>
             {% endfor %}
