[xlmm][flashsale][dinghuo] add search func

--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork2.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork2.html
@@ -71,6 +71,11 @@
 
                 </select>
             </div>
+            <div class="col-xs-2">
+                <label class="control-label" for="groupname">输入搜索:</label>
+                <input type="text" class="form-control" value="{{ search_text }}" name="search_text"/>
+            </div>
+
             <div class="col-xs-1">
                 <input type="submit" value="查询" class="btn btn-primary" style="margin-top:27px;"/>
             </div>
