[xlmm][flashsale][dinghuo] add total less num

--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork2.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork2.html
@@ -137,7 +137,8 @@
     </div>
     <div class="floatButton" style="z-index: 9999;">
         {% if total_more_num %}
-            <span style="font-size: 20px">共多了{{ total_more_num }}件</span>
+            <span style="font-size: 20px">共多了{{ total_more_num }}件</span><br>
+            <span style="font-size: 20px">少了{{ total_less_num }}件</span>
         {% endif %}
     </div>
     <div class="btn-group-vertical floatview">
