fix deposit pay , mama cross referal ,xiaolumm push clickrebeta task

--- a/shopmanager/flashsale/xiaolumm/templates/mama_verify.html
+++ b/shopmanager/flashsale/xiaolumm/templates/mama_verify.html
@@ -72,6 +72,8 @@
                         alert("手机号对应多位小鹿妈妈");
                     }else if (result == "unfound") {
                         alert("手机号未找到小鹿妈妈");
+                    }else if (result == "cross") {
+                        alert("小鹿妈妈不能相互推荐或自荐");
                     }else{
                     	alert("server error");
                     }
