--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork2.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/dailywork2.html
@@ -138,6 +138,8 @@
     <div class="floatButton" style="z-index: 9999;">
         {% if total_more_num %}
             <span style="font-size: 20px">共多了{{ total_more_num }}件</span><br>
+        {% endif %}
+        {% if total_less_num %}
             <span style="font-size: 20px">少了{{ total_less_num }}件</span>
         {% endif %}
     </div>
