[xlmm][flashsale][dinghuo] change backgroud color

--- a/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
+++ b/shopmanager/flashsale/dinghuo/templates/dinghuo/changedetail.html
@@ -251,7 +251,7 @@
         </div>
 
         <div class="col-lg-8">
-                <textarea id="id_note" rows="7" cols="40" name="note" readonly="readonly" class="form-control" >{{ orderlist.note|safe }}
+                <textarea style="background-color:#B4EEB4" id="id_note" rows="6" cols="40" name="note" readonly="readonly" class="form-control" >{{ orderlist.note|safe }}
                 </textarea>
         </div>
 
