fix flashsale pay , xiaolumm

--- a/shopmanager/flashsale/pay/templates/pay/mindex.html
+++ b/shopmanager/flashsale/pay/templates/pay/mindex.html
@@ -52,7 +52,7 @@
   {% endfor %}
   </div>
   
-  <div id="no_more" next="{% if products.next %}{{ products.next }}&format=json{% endif %}">努力加载中...</div>
+  <div id="no_more" next="{% if products.next %}{{ products.next }}&format=json{% endif %}">商品已经下架了</div>
 
   <nav id="main-nav" class="navbar navbar-default navbar-fixed-bottom">
   <div class="container">
