fix the sorted about top

--- a/shopmanager/shopback/trades/templates/product_analysis/xlmm_pro_analysis.html
+++ b/shopmanager/shopback/trades/templates/product_analysis/xlmm_pro_analysis.html
@@ -69,7 +69,7 @@
         $('#mytable').dataTable({
             //"bJQueryUI": true,
             "bAutoWidth": false, //自适应宽度
-            "aaSorting": [[1, "asc"]],
+            "aaSorting": [[3, "desc"]],
             "iDisplayLength": 50,
             "aLengthMenu": [[20, 50, -1], [20, 50, "All"]],
             //"bInfo":true,
