--- a/shopmanager/shopback/trades/templates/product_analysis/product_analysis_top100.html
+++ b/shopmanager/shopback/trades/templates/product_analysis/product_analysis_top100.html
@@ -70,7 +70,7 @@
         $('#mytable').dataTable({
             //"bJQueryUI": true,
             "bAutoWidth": false, //自适应宽度
-            "aaSorting": [[1, "asc"]],
+            "aaSorting": [[2, "desc"]],
             "iDisplayLength": 50,
             "aLengthMenu": [[20, 50, -1], [20, 50, "All"]],
             //"bInfo":true,
